# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
.cargo/: audit.toml  config.toml
.github/workflows/: general.yml
.github_disabled/workflows/: general.yml
configuration/: base.yaml
migrations/: 20220412195629_create_subscriptions_table.sql
scripts/: init_db.sh  update_sqlx_offline_data.sh
src/: configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
